--- a/config/common.yml
+++ b/config/common.yml
@@ -17,6 +17,7 @@ services:
 
   PrestaShop\Module\PsAccounts\Api\Client\AccountsClient:
     class: PrestaShop\Module\PsAccounts\Api\Client\AccountsClient
+    public: true
 
   PrestaShop\Module\PsAccounts\Presenter\PsAccountsPresenter:
     class: PrestaShop\Module\PsAccounts\Presenter\PsAccountsPresenter
