--- a/tests/phpstan/phpstan.neon
+++ b/tests/phpstan/phpstan.neon
@@ -6,4 +6,7 @@ parameters:
   reportUnmatchedIgnoredErrors: false
   ignoreErrors:
     - identifier: missingType.iterableValue
+    - '#Property Ps_accounts::$serviceContainer has unknown class#'
+    - '#Instantiated class PrestaShop\ModuleLibServiceContainer\DependencyInjection\ServiceContainer not found.#'
+    - '#Call to method getService() on an unknown class PrestaShop\ModuleLibServiceContainer\DependencyInjection\ServiceContainer.#'
   level: 9
