--- a/tests/phpstan/phpstan.neon
+++ b/tests/phpstan/phpstan.neon
@@ -8,5 +8,5 @@ parameters:
     - identifier: missingType.iterableValue
     - '#Property Ps_accounts::\$serviceContainer has unknown class PrestaShop\ModuleLibServiceContainer\DependencyInjection\ServiceContainer as its type.#'
     - '#Instantiated class PrestaShop\ModuleLibServiceContainer\DependencyInjection\ServiceContainer not found.#'
-    - '#Call to method getService() on an unknown class PrestaShop\ModuleLibServiceContainer\DependencyInjection\ServiceContainer.#'
+    - '#Call to method getService\(\) on an unknown class PrestaShop\ModuleLibServiceContainer\DependencyInjection\ServiceContainer.#'
   level: 9
