--- a/.editorconfig
+++ b/.editorconfig
@@ -13,6 +13,8 @@ insert_final_newline = true
 [*.md]
 trim_trailing_whitespace = false
 
+[*.{yml,yaml}]
+indent_size = 2
+
 [{Makefile,makefile,**.mk}]
 indent_style = tab
-indent_size = 4
